--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -1,18 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8" />
-    <title>Hello Electron React!</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
-  <script>
-    window.electron.ipcRenderer.once('ipc-example', (arg) => {
-      // eslint-disable-next-line no-console
-      console.log(arg);
-    });
-
-    window.electron.ipcRenderer.myPing();
-  </script>
+    <title>File Friend</title>
+</head>
+<body class="p-2">
+<div id="root"></div>
+</body>
 </html>
