--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>File Friend</title>
+    <title>file-base</title>
 </head>
 <body class="p-2">
 <div id="root"></div>
